pause garbage collection during efmtool compression